Updated db connection

--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -40,34 +40,43 @@
     .row
       .col-md-12
         %h4 Team
-      .col-md-3
-        %img.img-polaroid{:alt => "", :src => "/assets/dummies/team1.jpg"}/
-        .roles
-          %p.lead
-            %strong Binit
-          %p
-            President
-      .col-md-3
-        %img.img-polaroid{:alt => "", :src => "/assets/dummies/team2.jpg"}/
-        .roles
-          %p.lead
-            %strong Mihir 
-          %p
-            Lead designer
-      .col-md-3
-        %img.img-polaroid{:alt => "", :src => "/assets/dummies/team3.jpg"}/
-        .roles
-          %p.lead
-            %strong Sri Om
-          %p
-            Customer support
-      .col-md-3
-        %img.img-polaroid{:alt => "", :src => "/assets/dummies/team4.jpg"}/
-        .roles
-          %p.lead
-            %strong -- 
-          %p
-            \--
+      .col-md-12
+        .col-md-3
+          %img.img-polaroid{:alt => "", :src => "/assets/dummies/team5.jpg"}/
+          .roles
+            %p.lead
+              %strong Om Priyadarshi
+            %p
+              Convener
+        .col-md-3
+          %img.img-polaroid{:alt => "", :src => "/assets/dummies/team1.jpg"}/
+          .roles
+            %p.lead
+              %strong Binit
+            %p
+              President
+        .col-md-3
+          %img.img-polaroid{:alt => "", :src => "/assets/dummies/team2.jpg"}/
+          .roles
+            %p.lead
+              %strong Mihir 
+            %p
+              Lead designer
+        .col-md-3
+          %img.img-polaroid{:alt => "", :src => "/assets/dummies/team3.jpg"}/
+          .roles
+            %p.lead
+              %strong Sri Om
+            %p
+              Customer support
+      .col-md-12
+        .col-md-3
+          %img.img-polaroid{:alt => "", :src => "/assets/dummies/team4.jpg"}/
+          .roles
+            %p.lead
+              %strong Priyanka 
+            %p
+              PR Head
     / divider
     .row
       .col-md-12
