--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -125,13 +125,21 @@
               / Item Project and Filter Name
               %li.item-thumbs.col-md-3.design{"data-id" => "id-1", "data-type" => "icon"}
                 / Fancybox - Gallery Enabled - Title - Full Image
+                %a.hover-wrap.fancybox{"data-fancybox-group" => "gallery", :href => "/assets/works/aparajita-sarangi.JPG", :title => "Meeting with Aprajita Sarangi"}
+                  %col-md-.overlay-img
+                  %col-md-.overlay-img-thumb.font-icon-plus
+                / Thumb Image and Description
+                %img{:alt => "8th August 2019: Think India welcomed Bhubneshwar MP Aprajita Sarangi at NIT Rourkela.", :src => "/assets/works/aparajita-sarangi.JPG"}/
+              / End Item Project
+              / Item Project and Filter Name
+              %li.item-thumbs.col-md-3.design{"data-id" => "id-1", "data-type" => "icon"}
+                / Fancybox - Gallery Enabled - Title - Full Image
                 %a.hover-wrap.fancybox{"data-fancybox-group" => "gallery", :href => "/assets/works/dharmendra-pradhan.JPG", :title => "Meeting with Dharmendra Pradhan"}
                   %col-md-.overlay-img
                   %col-md-.overlay-img-thumb.font-icon-plus
                 / Thumb Image and Description
                 %img{:alt => "29th September 2019: Think India meet with Union Cabinet Minister Dharmendra Pradhan and greeted him in NIT Rourkela.", :src => "/assets/works/dharmendra-pradhan.JPG"}/
               / End Item Project
-              / Item Project and Filter Name
     / End Portfolio Projects
 %section#bottom
   .container
