--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -6,7 +6,7 @@
           Welcome to
           %strong Think India NIT Roureka
         %p
-          We are a network of students connected with various corporate companies and academic institutions engaged in knowledge synthesis. We believe being a student of an institution like NIT Rourkela where the government spends so much on us, it is our greater responsibility to contribute towards the development of the nation. To bring awareness among students about socio-economic conditions in India we are a registered club under SAC NIT Rourkela.
+          To bring awareness among students about socio-economic conditions in India we are a registered club under SAC NIT Rourkela. We are a network of students engaged in knowledge synthesis and personality building. For this purpose we network of corporate and academica. We believe being a student of an institution like NIT Rourkela where the government spends so much on us, it is our greater responsibility to contribute towards the development of the nation.
         %p
           We at Think India NIT Rourkela, work towards developing knowledge and awareness about India among young students. For this purpose, we keep on discussing social issues to find out their solutions. We organise talks of distinguished personalities so that young students can gain a broader view of contemporary India and it's problems. We also work on quality building through our in-house and external expertise through various training, internships and competitions.
       .col-md-6
