--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -14,11 +14,11 @@
         .flexslider
           %ul.slides
             %li{"data-thumb-alt" => "", :style => "width: 100%; float: left; margin-right: -100%; position: relative; opacity: 0; display: block; z-index: 1;"}
-              %img{:alt => "", :draggable => "false", :src => "/assets/works/full/image-01-full.jpg"}/
+              %img{:alt => "", :draggable => "false", :src => asset_path("works/full/image-01-full.jpg")}/
             %li{"data-thumb-alt" => "", :style => "width: 100%; float: left; margin-right: -100%; position: relative; opacity: 0; display: block; z-index: 1;"}
-              %img{:alt => "", :draggable => "false", :src => "/assets/works/full/image-02-full.jpg"}/
+              %img{:alt => "", :draggable => "false", :src => asset_path("works/full/image-02-full.jpg")}/
             %li.flex-active-slide{"data-thumb-alt" => "", :style => "width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2;"}
-              %img{:alt => "", :draggable => "false", :src => "/assets/works/full/image-03-full.jpg"}/
+              %img{:alt => "", :draggable => "false", :src => asset_path("works/full/image-03-full.jpg")}/
           %ol.flex-control-nav.flex-control-paging
             %li
               %a{:href => "#"} 1
@@ -42,28 +42,28 @@
         %h4 Team
       .col-md-12
         .col-md-3
-          %img.img-polaroid{:alt => "", :src => "/assets/dummies/team5.jpg"}/
+          %img.img-polaroid{:alt => "", :src => asset_path("dummies/team5.jpg") }/
           .roles
             %p.lead
               %strong Om Priyadarshi
             %p
               Convener
         .col-md-3
-          %img.img-polaroid{:alt => "", :src => "/assets/dummies/team1.jpg"}/
+          %img.img-polaroid{:alt => "", :src =>asset_path("dummies/team1.jpg")}/
           .roles
             %p.lead
               %strong Binit
             %p
               President
         .col-md-3
-          %img.img-polaroid{:alt => "", :src => "/assets/dummies/team2.jpg"}/
+          %img.img-polaroid{:alt => "", :src => asset_path("dummies/team2.jpg")}/
           .roles
             %p.lead
               %strong Mihir 
             %p
               Lead designer
         .col-md-3
-          %img.img-polaroid{:alt => "", :src => "/assets/dummies/team3.jpg"}/
+          %img.img-polaroid{:alt => "", :src => asset_path("dummies/team3.jpg")}/
           .roles
             %p.lead
               %strong Sri Om
@@ -71,7 +71,7 @@
               Customer support
       .col-md-12
         .col-md-3
-          %img.img-polaroid{:alt => "", :src => "/assets/dummies/team4.jpg"}/
+          %img.img-polaroid{:alt => "", :src => asset_path("dummies/team4.jpg")}/
           .roles
             %p.lead
               %strong Priyanka 
