--- a/app/views/layouts/_top_section.html.haml
+++ b/app/views/layouts/_top_section.html.haml
@@ -24,7 +24,7 @@
             %span.icon-bar
           .logo-container
             %a.text-center{:href => root_path}
-              %img.logo{:alt => "", :src => "/assets/logo.png"}/
+              %img.logo{:alt => "", :src => asset_path("logo.png")}/
               .logo-text
                 %small A cultural club registered with SAC, NIT Rourkela
         #navbarSupportedContent.collapse.navbar-collapse
