--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -13,4 +13,4 @@
 = stylesheet_link_tag :application
 
 / Fav and touch icons
-%link{:href => "/assets/ico/favicon.png", :rel => "shortcut icon"}/
+%link{:href => asset_path("ico/favicon.png"), :rel => "shortcut icon"}/
