--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -4,11 +4,11 @@
   #nivo-slider
     .nivo-slider
       / Slide #1 image
-      %img{:alt => "", :src => "/assets/slides/nivo/bg-1.jpg", :title => "#caption-1"}/
+      %img{:alt => "", :src => asset_path("slides/nivo/bg-1.jpg"), :title => "#caption-1"}/
       / Slide #2 image
-      %img{:alt => "", :src => "/assets/slides/nivo/bg-2.jpg", :title => "#caption-2"}/
+      %img{:alt => "", :src => asset_path("slides/nivo/bg-2.jpg"), :title => "#caption-2"}/
       / Slide #3 image
-      %img{:alt => "", :src => "/assets/slides/nivo/bg-3.jpg", :title => "#caption-3"}/
+      %img{:alt => "", :src => asset_path("slides/nivo/bg-3.jpg"), :title => "#caption-3"}/
     .container
       .row
         .col-md-12
@@ -107,38 +107,38 @@
             %ul#thumbs.portfolio
               / Item Project and Filter Name
               %li.item-thumbs.col-md-3.design{"data-id" => "id-0", "data-type" => "web"}
-                %a.hover-wrap.fancybox{"data-fancybox-group" => "gallery", :href => "/assets/works/youth-society-and-ehtrepreneurship-thumb.JPG", :title => "Talk on Youth Society and Entrepreneurship"}
+                %a.hover-wrap.fancybox{"data-fancybox-group" => "gallery", :href => asset_path("works/youth-society-and-ehtrepreneurship-thumb.JPG"), :title => "Talk on Youth Society and Entrepreneurship"}
                   %col-md-.overlay-img
                   %col-md-.overlay-img-thumb.font-icon-plus
                 / Thumb Image and Description
-                %img{:alt => "6th September 2019: Prof. Mahadeo Jaiswal (Director, IIM Sambalpur) delivered speech on role of youth in serving society through Entrepreneurship.", :src => "/assets/works/youth-society-and-ehtrepreneurship-thumb.JPG"}/
+                %img{:alt => "6th September 2019: Prof. Mahadeo Jaiswal (Director, IIM Sambalpur) delivered speech on role of youth in serving society through Entrepreneurship.", :src => asset_path("works/youth-society-and-ehtrepreneurship-thumb.JPG")}/
               / End Item Project
               / Item Project and Filter Name
               %li.item-thumbs.col-md-3.design{"data-id" => "id-1", "data-type" => "icon"}
                 / Fancybox - Gallery Enabled - Title - Full Image
-                %a.hover-wrap.fancybox{"data-fancybox-group" => "gallery", :href => "/assets/works/Inductions-thumb.jpg", :title => "Induction 2019"}
+                %a.hover-wrap.fancybox{"data-fancybox-group" => "gallery", :href => asset_path("works/Inductions-thumb.jpg"), :title => "Induction 2019"}
                   %col-md-.overlay-img
                   %col-md-.overlay-img-thumb.font-icon-plus
                 / Thumb Image and Description
-                %img{:alt => "12th September 2019: It was our first induction.", :src => "/assets/works/Inductions-thumb.jpg"}/
+                %img{:alt => "12th September 2019: It was our first induction.", :src => asset_path("works/Inductions-thumb.jpg")}/
               / End Item Project
               / Item Project and Filter Name
               %li.item-thumbs.col-md-3.design{"data-id" => "id-1", "data-type" => "icon"}
                 / Fancybox - Gallery Enabled - Title - Full Image
-                %a.hover-wrap.fancybox{"data-fancybox-group" => "gallery", :href => "/assets/works/aparajita-sarangi.JPG", :title => "Meeting with Aprajita Sarangi"}
+                %a.hover-wrap.fancybox{"data-fancybox-group" => "gallery", :href => asset_path("works/aparajita-sarangi.JPG"), :title => "Meeting with Aprajita Sarangi"}
                   %col-md-.overlay-img
                   %col-md-.overlay-img-thumb.font-icon-plus
                 / Thumb Image and Description
-                %img{:alt => "8th August 2019: Think India welcomed Bhubneshwar MP Aprajita Sarangi at NIT Rourkela.", :src => "/assets/works/aparajita-sarangi.JPG"}/
+                %img{:alt => "8th August 2019: Think India welcomed Bhubneshwar MP Aprajita Sarangi at NIT Rourkela.", :src => asset_path("works/aparajita-sarangi.JPG")}/
               / End Item Project
               / Item Project and Filter Name
               %li.item-thumbs.col-md-3.design{"data-id" => "id-1", "data-type" => "icon"}
                 / Fancybox - Gallery Enabled - Title - Full Image
-                %a.hover-wrap.fancybox{"data-fancybox-group" => "gallery", :href => "/assets/works/dharmendra-pradhan.JPG", :title => "Meeting with Dharmendra Pradhan"}
+                %a.hover-wrap.fancybox{"data-fancybox-group" => "gallery", :href => asset_path("works/dharmendra-pradhan.JPG"), :title => "Meeting with Dharmendra Pradhan"}
                   %col-md-.overlay-img
                   %col-md-.overlay-img-thumb.font-icon-plus
                 / Thumb Image and Description
-                %img{:alt => "29th September 2019: Think India meet with Union Cabinet Minister Dharmendra Pradhan and greeted him in NIT Rourkela.", :src => "/assets/works/dharmendra-pradhan.JPG"}/
+                %img{:alt => "29th September 2019: Think India meet with Union Cabinet Minister Dharmendra Pradhan and greeted him in NIT Rourkela.", :src => asset_path("works/dharmendra-pradhan.JPG")}/
               / End Item Project
     / End Portfolio Projects
 %section#bottom
