--- a/app/views/layouts/thredded/application.html.erb
+++ b/app/views/layouts/thredded/application.html.erb
@@ -4,7 +4,7 @@
     <title>Thredded | <%= yield :thredded_page_title %></title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <%= stylesheet_link_tag 'thredded', 'data-turbolinks-track': 'reload' %>
-    <link href="/assets/custom-threaded.css", rel="stylesheet"/>
+    <%= stylesheet_link_tag 'custom-threaded', 'data-turbolinks-track': 'reload' %>
     <%= csrf_meta_tag %>
     <%= csp_meta_tag if Thredded.rails_supports_csp_nonce? %>
     <%= javascript_include_tag 'thredded',
