--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -8,6 +8,10 @@
       %br/
       = f.text_field :name, class: 'form-control'
     .field
+      = f.label :about_me
+      %br/
+      = f.text_area :about_me, class: 'form-control'
+    .field
       = f.label :email
       %br/
       = f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control'
