--- a/app/views/press_releases/index.html.haml
+++ b/app/views/press_releases/index.html.haml
@@ -1,7 +1,9 @@
 .container.mini-frame
-  %h4.text-center Think India press releases
+  %h4.text-center News & Events
   - if current_user && current_user.admin
     .pull-right= link_to 'New Press release', new_press_release_path, class: 'btn btn-primary'
+    %br/
+    %br/
   - @press_releases.each do |press_release|
     %p
       .pull-right 
