Changes with hiding

--- a/app/views/contacts/new.html.haml
+++ b/app/views/contacts/new.html.haml
@@ -8,7 +8,9 @@
       %br/
       Think India,
       %br/
-      SAC, NIT Rourkela
+      NIT Rourkela
       %br/
       Contact No: +91-944-129-6505
+      %br/
+      Email: thinkindianitr[at]gmail.com
 
