--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -6,26 +6,17 @@
           Welcome to
           %strong Think India NIT Roureka
         %p
-          To bring awareness among students about socio-economic conditions in India we are a registered club under SAC NIT Rourkela. We are a network of students engaged in knowledge synthesis and personality building. For this purpose we network of corporate and academica. We believe being a student of an institution like NIT Rourkela where the government spends so much on us, it is our greater responsibility to contribute towards the development of the nation.
-        %p
-          We at Think India NIT Rourkela, work towards developing knowledge and awareness about India among young students. For this purpose, we keep on discussing social issues to find out their solutions. We organise talks of distinguished personalities so that young students can gain a broader view of contemporary India and it's problems. We also work on quality building through our in-house and external expertise through various training, internships and competitions.
+          To bring awareness among students about socio-economic conditions in India, Think India NIT Rourkela is a registered club under SAC NIT Rourkela. We are a network of students engaged in knowledge synthesis and personality building. For this purpose, we network with the corporate sector and academia. We believe being students of institutions like NIT Rourkela where the government spends so much on us, it is our greater responsibility to contribute towards the development of the nation. We at Think India NIT Rourkela, work towards developing knowledge and awareness about India among young students. We organise talks, debates, workshops and other events to channel knowledge to masses. We support students by availing training and internship through our network in the corporate sector and academia.
       .col-md-6
         / start flexslider
         .flexslider
           %ul.slides
             %li{"data-thumb-alt" => "", :style => "width: 100%; float: left; margin-right: -100%; position: relative; opacity: 0; display: block; z-index: 1;"}
-              %img{:alt => "", :draggable => "false", :src => asset_path("works/full/image-01-full.jpg")}/
-            %li{"data-thumb-alt" => "", :style => "width: 100%; float: left; margin-right: -100%; position: relative; opacity: 0; display: block; z-index: 1;"}
-              %img{:alt => "", :draggable => "false", :src => asset_path("works/full/image-02-full.jpg")}/
-            %li.flex-active-slide{"data-thumb-alt" => "", :style => "width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2;"}
-              %img{:alt => "", :draggable => "false", :src => asset_path("works/full/image-03-full.jpg")}/
-          %ol.flex-control-nav.flex-control-paging
-            %li
-              %a{:href => "#"} 1
-            %li
-              %a{:href => "#"} 2
-            %li
-              %a.flex-active{:href => "#"} 3
+              %img{:alt => "", :draggable => "false", :src => asset_path("works/full/think-india-about.png"), class: 'about-slider'}/
+            /%li{"data-thumb-alt" => "", :style => "width: 100%; float: left; margin-right: -100%; position: relative; opacity: 0; display: block; z-index: 1;"}
+            /  %img{:alt => "", :draggable => "false", :src => asset_path("works/full/nit-about.png"), class: 'about-slider' }/
+            /%li.flex-active-slide{"data-thumb-alt" => "", :style => "width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2;"}
+            /  %img{:alt => "", :draggable => "false", :src => asset_path("works/full/sac-about.png"), class: 'about-slider'}/
           %ul.flex-direction-nav
             %li.flex-nav-prev
               %a.flex-prev{:href => "#"} Previous
@@ -42,36 +33,36 @@
         %h4 Team
       .col-md-12
         .col-md-3
-          %img.img-polaroid{:alt => "", :src => asset_path("dummies/team5.jpg") }/
+          %img.img-polaroid{:alt => "", :src => asset_path("works/full/team5.jpg") }/
           .roles
             %p.lead
               %strong Om Priyadarshi
             %p
               Convener
         .col-md-3
-          %img.img-polaroid{:alt => "", :src =>asset_path("dummies/team1.jpg")}/
+          %img.img-polaroid{:alt => "", :src =>asset_path("works/full/team1.jpg")}/
           .roles
             %p.lead
               %strong Binit
             %p
               President
         .col-md-3
-          %img.img-polaroid{:alt => "", :src => asset_path("dummies/team2.jpg")}/
+          %img.img-polaroid{:alt => "", :src => asset_path("works/full/team2.jpg")}/
           .roles
             %p.lead
               %strong Mihir 
             %p
-              Lead designer
+              Social Media Manager
         .col-md-3
-          %img.img-polaroid{:alt => "", :src => asset_path("dummies/team3.jpg")}/
+          %img.img-polaroid{:alt => "", :src => asset_path("works/full/team3.jpg")}/
           .roles
             %p.lead
-              %strong Sri Om
+              %strong Sriom
             %p
-              Customer support
+              Lead designer
       .col-md-12
         .col-md-3
-          %img.img-polaroid{:alt => "", :src => asset_path("dummies/team4.jpg")}/
+          %img.img-polaroid{:alt => "", :src => asset_path("works/full/team4.jpg")}/
           .roles
             %p.lead
               %strong Priyanka 
