--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -16,29 +16,33 @@
           #caption-1.nivo-caption
             %div
               %h2
-                Netaji
-                %strong Subhash Chandra Bose
+                %small Our Inspiration
+                %br/ 
+                %strong Netaji Subhash Chandra Bose
               %p
                 तुम मुझे खून दो, मैं तुम्हें आज़ादी दूंगा
-              %a.btn.btn-theme{:href => "#"} Read More
+              %a.btn.btn-theme{:href => "/home/subhas"} Read More
           / Slide #2 caption
           #caption-2.nivo-caption
             %div
               %h2
-                Bal
-                %strong Gangadhar Tilak
+                %small Our Inspiration
+                %br/ 
+                %strong Sardar Patel
               %p
-                Swaraj is my birthright, and I shall have it!
-              %a.btn.btn-theme{:href => "#"} Read More
+                Prime responsibility of every citizen to feel that his country is free and to defend it's freedom is his duty.
+
+              %a.btn.btn-theme{:href => "/home/patel"} Read More
           / Slide #3 caption
           #caption-3.nivo-caption
             %div
               %h2
-                Shri
-                %strong Aurobindo
+                %small Our Inspiration
+                %br/ 
+                %strong Shri Aurobindo
               %p
                 By our stumbling the world is perfected.
-              %a.btn.btn-theme{:href => "#"} Read More
+              %a.btn.btn-theme{:href => "/home/aurobindo"} Read More
   / end slider
 %section.callaction#services
   .container
