--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -16,7 +16,7 @@
           %h5.widgetheading Important stuff
           %ul.link-list
             %li
-              %a{:href => press_releases_path } Press release
+              %a{:href => news_and_events_path } News & Events
             %li
               %a{:href => terms_and_conditions_path} Terms and conditions
             %li
@@ -29,7 +29,7 @@
           %address
             %strong Think India NIT Rourkela 
             %br/
-            Student Activity Center, NIT Rourkela
+            NIT Rourkela
             %br/
             Pin: 769008
           %p
@@ -44,7 +44,7 @@
         .col-md-6
           .copyright
             %p
-              %span © Think India - All right reserved.
+              %span © Think India NIT Rourkela - All right reserved.
         .col-md-6
           %ul.social-network
             %li
@@ -60,4 +60,3 @@
   \==================================================
 / Placed at the end of the document so the pages load faster
 = javascript_include_tag :application
-= javascript_include_tag Ckeditor.cdn_url
