--- a/app/views/layouts/_top_navigation.html.haml
+++ b/app/views/layouts/_top_navigation.html.haml
@@ -2,6 +2,8 @@
   %li
     %a{:href => root_path} Home
   %li
+    %a{:href => news_and_events_path} News & Events
+  %li
     %a{:href => "/forum"} Forum
   %li
     %a{:href => "/blogs"} Blog
