--- a/app/views/layouts/thredded/application.html.erb
+++ b/app/views/layouts/thredded/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Thredded | <%= yield :thredded_page_title %></title>
+    <title>Think India NITR Forum</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <%= stylesheet_link_tag 'thredded', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag 'custom-threaded', 'data-turbolinks-track': 'reload' %>
@@ -17,7 +17,7 @@
   <body>
     <%= image_tag "logo.png", class: 'forum-logo' %>
     <br/>
-    <div class="forum-title"><small>A Cultural club registered with SAC, NIT Rourkela<small></div>
+    <div class="forum-title"><small>.<small></div>
     <h2 class="forum-title">Think India Forum</h3>
     <hr/>
     <%= yield %>
