--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -2,7 +2,7 @@
   .pull-right= link_to 'Add New Post', new_post_path, class: 'btn btn-primary'
   %h1.text-center Think India NITR Blogs
   
-  - if current_user.admin
+  - if current_user && current_user.admin
     %h3 Under moderation
     - @unpublished_posts.each do |post|
       %p
