--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -1,3 +1,4 @@
 .container
-  %h3 Send your blog to admin for publication
+  %br/
+  %h3.text-center Publish your article with Think India 
   = render 'form'
