--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,7 @@
  *= require jcarousel
  *= require flexslider
  *= require google-code-prettify/prettify
+ *= require social-share-button
  *= require font-awesome
  *= require custom-fonts
  *= require overwrite
