--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -37,10 +37,10 @@
 
 body {
   font-family: 'Open Sans', Arial, sans-serif;
-  font-size: 14px;
-  font-weight: 300;
+  font-size: 16px;
+  font-weight: 500;
   line-height: 1.6em;
-  color: #656565;
+  color: black;
 }
 
 a:active {
@@ -702,6 +702,12 @@ section.callaction {
 #content img {
   max-width: 100%;
   height: auto;
+}
+
+.about-slider {
+    height: 340px !important;
+    width: 340px !important;
+    margin: 0px auto;
 }
 
 /* --- Call to action --- */
