--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -7,6 +7,6 @@
           %li= message
 
   = f.input :title
-  = f.input :content, input_html: {class: 'ckeditor'}
+  = f.input :content, as: 'ckeditor'
   .actions
     = f.submit 'Save', class: 'btn btn-primary'
