--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -3,40 +3,49 @@
     Update profile
   = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
     = render "devise/shared/error_messages", resource: resource
-    .field
-      = f.label :name
-      %br/
-      = f.text_field :name, class: 'form-control'
-    .field
-      = f.label :about_me
-      %br/
-      = f.text_area :about_me, class: 'form-control'
-    .field
-      = f.label :email
-      %br/
-      = f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control'
-    - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-      %div
-        Currently waiting confirmation for: #{resource.unconfirmed_email}
-    .field
-      = f.label :password
-      %i (leave blank if you don't want to change it)
-      %br/
-      = f.password_field :password, autocomplete: "new-password", class: 'form-control'
-      - if @minimum_password_length
+    .col-md-12
+      .col-md-6
+        .field
+          = f.label :name
+          %br/
+          = f.text_field :name, class: 'form-control'
+        .field
+          = f.label :about_me
+          %br/
+          = f.text_area :about_me, class: 'form-control'
+        .field
+          = f.label :email
+          %br/
+          = f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control'
+        - if devise_mapping.confirmable? && resource.pending_reconfirmation?
+          %div
+            Currently waiting confirmation for: #{resource.unconfirmed_email}
+        .field
+          = f.label :password
+          %i (leave blank if you don't want to change it)
+          %br/
+          = f.password_field :password, autocomplete: "new-password", class: 'form-control'
+          - if @minimum_password_length
+            %br/
+            %em
+              = @minimum_password_length
+              characters minimum
+        .field
+          = f.label :password_confirmation
+          %br/
+          = f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control'
+        .field
+          = f.label :current_password
+          %i (we need your current password to confirm your changes)
+          %br/
+          = f.password_field :current_password, autocomplete: "current-password", class: 'form-control'
+      .col-md-6
+        = image_tag(current_user.profile_pic.url, width: 300, height: 300)
         %br/
-        %em
-          = @minimum_password_length
-          characters minimum
-    .field
-      = f.label :password_confirmation
-      %br/
-      = f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control'
-    .field
-      = f.label :current_password
-      %i (we need your current password to confirm your changes)
-      %br/
-      = f.password_field :current_password, autocomplete: "current-password", class: 'form-control'
+        %br/
+        = f.label :profile_pic
+        %br/
+        = f.file_field :profile_pic
     .actions
       = f.submit "Update", class: 'btn btn-primary'
   %h3 Cancel my account
