--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -14,5 +14,17 @@
 = javascript_include_tag Ckeditor.cdn_url
 = javascript_include_tag :application
 
+:plain
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151345591-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-151345591-1');
+  </script>
+
+
 / Fav and touch icons
 %link{:href => asset_path("ico/favicon.png"), :rel => "shortcut icon"}/
