--- a/app/views/layouts/_top_navigation.html.haml
+++ b/app/views/layouts/_top_navigation.html.haml
@@ -3,10 +3,24 @@
     %a{:href => root_path} Home
   %li
     %a{:href => news_and_events_path} News & Events
-  %li
-    %a{:href => "/forum"} Forum
-  %li
-    %a{:href => "/blogs"} Blog
+  %li.dropdown
+    %a.dropdown-toggle{"data-toggle" => "dropdown", "href" => "#"} 
+      Gallery
+      %span.caret
+    %ul.dropdown-menu
+      %li
+        %a{href: gallery_pics_path(collection: 'Think India') } Think India Gallery
+      %li
+        %a{href: gallery_pics_path(collection: 'Innovision 2019') } Innovision 2019
+  %li.dropdown
+    %a.dropdown-toggle{"data-toggle" => "dropdown", "href" => "#"} 
+      Discussion
+      %span.caret
+    %ul.dropdown-menu
+      %li
+        %a{:href => "/forum"} Forum
+      %li
+        %a{:href => "/blogs"} Blog
   %li
     %a{:href => about_path} About Us
   %li
@@ -18,6 +32,7 @@
         %span.caret
       %ul.dropdown-menu
         %li= link_to "Users", admin_users_path
+        %li= link_to "Gallery Pics", admin_gallery_pics_path
         %li= link_to "Applications", application_forms_path
         %li= link_to "Contacts", contacts_path
   
