--- a/app/views/layouts/thredded/application.html.erb
+++ b/app/views/layouts/thredded/application.html.erb
@@ -5,6 +5,7 @@
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <%= stylesheet_link_tag 'thredded', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag 'custom-threaded', 'data-turbolinks-track': 'reload' %>
+    <%= favicon_link_tag asset_path("favicon.ico") %>
     <%= csrf_meta_tag %>
     <%= csp_meta_tag if Thredded.rails_supports_csp_nonce? %>
     <%= javascript_include_tag 'thredded',
