--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -17,12 +17,17 @@
   %p
     %h5 Comments:
     = render "comments/form"
+    .col-md-12
+      %hr/
     - unless @post.comments.any?
       .text-center No comments added yet.
     - else
       - @post.comments.each do |comment|
         .col-md-12
-          .col-md-2= link_to comment.user.name, "/users/#{comment.user.slug}"
+          .col-md-2
+            = image_tag(comment.user.profile_pic(:thumb))
+            %br/
+            = link_to comment.user.name, "/users/#{comment.user.slug}"
           .col-md-10
             = comment.content.html_safe
         .col-md-12
