User invitation integration

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -127,7 +127,7 @@
                 %img{:alt => "12th September 2019: It was our first induction.", :src => asset_path("works/Inductions-thumb.jpg")}/
               / End Item Project
               / Item Project and Filter Name
-              %li.item-thumbs.col-md-3.design{"data-id" => "id-1", "data-type" => "icon"}
+              %li.item-thumbs.col-md-3.design{"data-id" => "id-2", "data-type" => "icon"}
                 / Fancybox - Gallery Enabled - Title - Full Image
                 %a.hover-wrap.fancybox{"data-fancybox-group" => "gallery", :href => asset_path("works/aparajita-sarangi.JPG"), :title => "Meeting with Aprajita Sarangi"}
                   %col-md-.overlay-img
@@ -136,7 +136,7 @@
                 %img{:alt => "8th August 2019: Think India welcomed Bhubneshwar MP Aprajita Sarangi at NIT Rourkela.", :src => asset_path("works/aparajita-sarangi.JPG")}/
               / End Item Project
               / Item Project and Filter Name
-              %li.item-thumbs.col-md-3.design{"data-id" => "id-1", "data-type" => "icon"}
+              %li.item-thumbs.col-md-3.design{"data-id" => "id-3", "data-type" => "icon"}
                 / Fancybox - Gallery Enabled - Title - Full Image
                 %a.hover-wrap.fancybox{"data-fancybox-group" => "gallery", :href => asset_path("works/dharmendra-pradhan.JPG"), :title => "Meeting with Dharmendra Pradhan"}
                   %col-md-.overlay-img
@@ -144,11 +144,13 @@
                 / Thumb Image and Description
                 %img{:alt => "29th September 2019: Think India meet with Union Cabinet Minister Dharmendra Pradhan and greeted him in NIT Rourkela.", :src => asset_path("works/dharmendra-pradhan.JPG")}/
               / End Item Project
+              / Item Project and Filter Name
+              %li.item-thumbs.col-md-3.design{"data-id" => "id-4", "data-type" => "icon"}
+                / Fancybox - Gallery Enabled - Title - Full Image
+                %a.hover-wrap.fancybox{"data-fancybox-group" => "gallery", :href => asset_path("works/aashish_chauhan.JPG"), :title => "A talk by Aashish Chauhan"}
+                  %col-md-.overlay-img
+                  %col-md-.overlay-img-thumb.font-icon-plus
+                / Thumb Image and Description
+                %img{:alt => "21 October 2019, Think India NITR managed talk by Aashish Chauhan", :src => asset_path("works/aashish_chauhan.JPG")}/
+              / End Item Project
     / End Portfolio Projects
-%section#bottom
-  .container
-    .row
-      .col-md-12
-        .aligncenter
-          #twitter-wrapper
-            #twitter
