--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,3 +1,15 @@
+%section.callaction
+  .container
+    .row
+      .col-md-12
+        .big-cta
+          %h5 Do you find this portal useful? Help us to expand our reach. Invite your friends to Think India NITR
+          = form_tag user_invitations_path do
+            .col-md-3= text_field_tag :name, nil, class: 'form-control', placeholder: 'Name'
+            .col-md-3= text_field_tag :email, nil, class: 'form-control', placeholder: 'Email'
+            .col-md-3= recaptcha_tags 
+            .col-md-3= submit_tag "Send Invitation", class: 'btn btn-primary pull-right'
+              
 %footer
   .container
     .row
