--- a/app/views/gallery_pics/index.html.haml
+++ b/app/views/gallery_pics/index.html.haml
@@ -11,7 +11,7 @@
   .tab-content
     #public_pics.tab-pane.fade.in.active
       - @gallery_pics.each do |pic|
-        .gallery-pic=link_to image_tag(pic.photo.url(:medium), width: '200', height: '200'), pic
+        .gallery-pic=link_to image_tag(pic.photo.url(:medium), width: '200', height: '200'), gallery_pic_path(pic, collection: params[:collection])
       = will_paginate @gallery_pics
       = "No pics added here yet." if @gallery_pics.empty?
 
@@ -19,7 +19,7 @@
       - if current_user
         .col-md-12
           - @user_gallery_pics.each do |pic|
-            .gallery-pic=link_to image_tag(pic.photo.url(:medium), width: '200', height: '200'), pic
+            .gallery-pic=link_to image_tag(pic.photo.url(:medium), width: '200', height: '200'), gallery_pic_path(pic, collection: params[:collection])
         = will_paginate @user_gallery_pics, param_name: 'my_pics_page', params: {active_tab: 'personal_pics'}
         = "No pics added here yet." if @user_gallery_pics.empty?
       - else
