--- a/app/views/layouts/thredded/application.html.erb
+++ b/app/views/layouts/thredded/application.html.erb
@@ -20,7 +20,7 @@
     <%= image_tag "logo.png", class: 'forum-logo' %>
     <br/>
     <div class="forum-title"><small>.<small></div>
-    <h2 class="forum-title">Think India Forum</h3>
+    <h2 class="forum-title">Think India NITR Forum</h3>
     <hr/>
     <%= yield %>
   </body>
