--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -50,7 +50,7 @@
       .col-md-12
         .big-cta
           .cta-text
-            %h3
+            %h3.text-center
               We are Think India and
               %col-md-.highlight
                 %strong We think for INDIA!
