--- a/app/views/home/terms_and_conditions.html.haml
+++ b/app/views/home/terms_and_conditions.html.haml
@@ -1,5 +1,5 @@
 .container
-  %h1.text-center Terms and Conditions
+  %h2.main.text-center Terms and Conditions
   %p
     %b Welcome to Think India NIT Rourkela!
 
